# thread_title_generator3

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
output_samples/: README.md  output.txt.base64
workspace/: 01_download_threads.ipynb  02_preprocess_threads.ipynb  03_train_sentencepiece.ipynb  04_make_dataset.ipynb  05_train_generator.ipynb  06_generate_fake_dataset.ipynb  07_train_filter.ipynb  08_generate_with_filter.ipynb
workspace/scripts/: model.py  normalize.py  transformer_tutorial_module.py
